# dirac

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  agents.csv  docker-compose.yml  map.csv  run_agents.sh
.github/scripts/: build-and-push.sh
dirac_base/: CMakeLists.txt  package.xml
dirac_base/launch/: multi_agents.launch.py
dirac_base/src/: agent_node.cpp
dirac_bringup/: CMakeLists.txt  package.xml
dirac_bringup/launch/: dirac_agent_bringup.launch.py  dirac_bringup.launch.py
dirac_bringup/scripts/: run.sh
dirac_deployment/: Dockerfile  docker-compose.yml
dirac_lib/: CMakeLists.txt  package.xml
dirac_lib/include/dirac_lib/: election.hpp
dirac_lib/src/: election.cpp
dirac_msgs/: CMakeLists.txt
dirac_msgs/msg/: AgentCommand.msg  Election.msg  GridPose.msg  LeaderAnnouncement.msg
dirac_navigation/: CMakeLists.txt  package.xml
dirac_navigation/config/: navigation_controller_config.yaml
dirac_navigation/examples/: strategy_pattern_usage.cpp
dirac_navigation/include/dirac_navigation/: navigation_controller.hpp
dirac_navigation/include/dirac_navigation/config/: navigation_config.hpp
dirac_navigation/include/dirac_navigation/publishers/: grid_pose_publisher.hpp  publisher_manager.hpp
dirac_navigation/include/dirac_navigation/strategies/: backward_movement.hpp  forward_movement.hpp  left_movement.hpp  movement_strategy.hpp  movement_strategy_factory.hpp  right_movement.hpp
dirac_navigation/launch/: navigation_controller.launch.py
dirac_navigation/src/: discrete_navigation_controller_node.cpp  grid_pose_publisher_node.cpp  navigation_controller.cpp
dirac_navigation/src/config/: navigation_config.cpp
dirac_navigation/src/publishers/: grid_pose_publisher.cpp  publisher_manager.cpp
dirac_navigation/src/strategies/: backward_movement.cpp  forward_movement.cpp  left_movement.cpp  movement_strategy.cpp  movement_strategy_factory.cpp  right_movement.cpp
dirac_simulation/: CMakeLists.txt  package.xml
dirac_simulation/launch/: turtle_simulation.launch.py
dirac_simulation/src/: turtle_controller.cpp
dirac_task_assignment/: CMakeLists.txt  package.xml
docs/dracon.wiki/: Canvas.md  Home.md
install/: local_setup.sh  setup.sh
install/dracon_msgs/include/dracon_msgs/dracon_msgs/msg/: job_assignment.h  job_assignment.hpp  job_assignment_table.h  job_assignment_table.hpp  job_cost.h  job_cost.hpp  job_cost_table.hpp  job_list.hpp  rosidl_typesupport_introspection_c__visibility_control.h
install/dracon_msgs/include/dracon_msgs/dracon_msgs/msg/detail/: job__functions.h  job__rosidl_typesupport_fastrtps_c.h  job__rosidl_typesupport_introspection_c.h  job__rosidl_typesupport_introspection_cpp.hpp  job__struct.h  job__struct.hpp  job__traits.hpp  job__type_support.c  job_assignment__functions.h  job_assignment__rosidl_typesupport_fastrtps_c.h  job_assignment__traits.hpp  job_assignment__type_support.c  job_assignment_table__builder.hpp  job_assignment_table__functions.h  job_assignment_table__rosidl_typesupport_fastrtps_c.h  job_assignment_table__struct.hpp  job_assignment_table__type_support.c  job_assignment_table__type_support.cpp  job_assignment_table__type_support.h  job_assignment_table__type_support.hpp  job_cost__functions.h  job_cost__rosidl_typesupport_fastrtps_c.h  job_cost__rosidl_typesupport_fastrtps_cpp.hpp  job_cost__struct.h  job_cost__struct.hpp  job_cost__type_support.c  job_cost__type_support.h  job_cost__type_support.hpp  job_cost_table__rosidl_typesupport_fastrtps_c.h  job_cost_table__rosidl_typesupport_introspection_c.h  job_cost_table__rosidl_typesupport_introspection_cpp.hpp  job_cost_table__struct.hpp  job_cost_table__type_support.cpp  job_cost_table__type_support.h  job_cost_table__type_support.hpp  job_list__builder.hpp  job_list__functions.h  job_list__rosidl_typesupport_fastrtps_c.h  job_list__struct.hpp  (+11 more)
install/dracon_msgs/share/ament_index/resource_index/rosidl_interfaces/: dracon_msgs
install/dracon_msgs/share/dracon_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/dracon_msgs/share/dracon_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  dracon_msgsConfig.cmake  dracon_msgs__rosidl_typesupport_introspection_cExport-noconfig.cmake  dracon_msgs__rosidl_typesupport_introspection_cExport.cmake  export_dracon_msgs__rosidl_generator_cExport-noconfig.cmake  export_dracon_msgs__rosidl_generator_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/dracon_msgs/share/dracon_msgs/msg/: Job.msg  JobAssignmentTable.msg  JobStatus.msg
install/pibt2/share/pibt2/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pp/lib/pp/: prio
install/pp/share/pp/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/pp/share/pp/cmake/: ppConfig.cmake
install/talk/share/talk/: package.bash  package.zsh
log/: latest_build
src/agentswarm/: CMakeLists.txt  package.xml
src/agentswarm/launch/: spawnagent.launch.py
src/agentswarm/msg/: AgentDistance.msg  ElectionStatus.msg  Heartbeat.msg  JobAssignment.msg  JobBid.msg
src/agentswarm/src/: agent_node.cpp  job_publisher.cpp
src/bt/: CMakeLists.txt  package.xml
src/bt/include/bt/: agent_state.hpp  agent_state_db.hpp  big_tank.hpp  file_io.hpp  path_planner.hpp  pseudocode.txt  state_updater.hpp
src/bt/launch/: simple_agents.launch.py
src/bt/src/: agent.cpp  big_tank.cpp  path_planner.cpp
src/bt_rviz/: CMakeLists.txt  package.xml
src/bt_rviz/include/bt_rviz/: visualizer_node.hpp
src/bt_rviz/src/: visualizer_node.cpp
src/dirac_msgs/: package.xml
src/dirac_msgs/msg/: AgentCommand.msg
src/dracon_msgs/: CMakeLists.txt  package.xml
src/dracon_msgs/msg/: AgentJsonUpdate.msg  JobCostTable.msg  JobList.msg
src/pibt2/: CMakeLists.txt  Dockerfile  pibt_agent_node.cpp
src/pp/: CMakeLists.txt  package.xml
src/pp/launch/: agents_launch.py
src/pp/src/: agent_node.cpp  prio.cpp
src/talk/: CMakeLists.txt  package.xml
src/talk/msg/: AgentState.msg
(+5 files in other folders)
