<?xml version="1.0"?>
<package format="3">
  <name>pibt2</name>
  <version>0.0.1</version>
  <description>PIBT multi-agent pathfinding ROS 2 node</description>
  <maintainer email="maintainer@example.com">Maintainer Name</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <exec_depend>nlohmann-json3-dev</exec_depend>
</package> 